--- a/Node Model/Stage1/backend/package.json
+++ b/Node Model/Stage1/backend/package.json
@@ -11,7 +11,10 @@
   "author": "guru",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "concurrently": "^9.0.1",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
@@ -20,5 +23,10 @@
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "@types/cors": "^2.8.17",
+    "cors": "^2.8.5",
+    "express": "^4.21.0"
   }
 }
